Apply some IDE suggestions